--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -18,7 +18,8 @@
   <% unless nq.nil? %>
      <% nid = nq.id %>
   <% end %>
-  <%= link_to "Edit Next", edit_question_path(Question.find(nid)), :class => 'btn btn-mini' %>
+  <%= link_to "Edit Next", edit_question_path(Question.find(nid)), :class => 'btn btn-mini' %> |
+  <%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
 </p>
 
 <p>
