page 74 and topics lists pages

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -31,6 +31,10 @@ span.inner-pre {
     
 }
 
+#searchlable {
+  display: inline-block;
+}
+
 #searchfpn {
   display: inline-block;
   width: 1.5em;
