--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,6 +10,16 @@
   <%= @topic.comments %>
 </p>
 
+<p>
+  <strong>Contained in these questions:</strong>
+<% @topic.questions.sort_by { |a| a.page*100+a.num }.each do |q| %>
+    <%=  "\n" if q.page > 50 %>
+    <%= q.level%>:
+    <%= q.page%>-
+    <%=q.num %> |
+<%end%>
+</p>
+
 <% if can? :update, @topic %>
   <%= link_to 'Edit', edit_topic_path(@topic), :class => 'btn btn-mini' %> |
 <% end %>
