--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,6 +11,16 @@
 </p>
 
 <p>
+  <strong>In Level1?:</strong>
+  <%= @topic.lev1 ? "Yes" : "No" %>
+</p>
+
+<p>
+  <strong>In Level2?:</strong>
+  <%= @topic.lev2 ? "Yes" : "No" %>
+</p>
+
+<p>
   <strong>Contained in these questions:</strong>
 <% @topic.questions.sort_by { |a| a.page*100+a.num }.each do |q| %>
     <%=  "\n" if q.page > 50 %>
