--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,7 +3,7 @@
 <% if can? :create, Question %>
   <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
 <% end %>
-<%= link_to 'Topics', topics_path, :class => 'btn btn-mini' %>
+<%= link_to 'Topics', topics_path, :class => 'btn btn-xs' %>
 <%= link_to 'Next Page', questions_path, :class => 'btn btn-mini' %>
 <%= " There are currently #{Question.where(:level => 1).count} level 1 and #{Question.where(:level => 2).count} 1evel 2 questions in the list, #{Question.where(:level => 1).maximum("page")} pages in Book 1, #{Question.where(:level => 2).maximum("page")} pages in Book 2." %>
 <br>
@@ -75,7 +75,7 @@
         <% end %>
         <td><%= question.topics.count %></td>
         <td><%= i %></td>
-        <td><%= link_to 'Show', question, :class => 'btn btn-mini' %></td>
+        <td><%= link_to 'Show', question, :class => 'btn btn-xs' %></td>
         <% if can? :update, question %>
           <td><%= link_to 'Edit', edit_question_path(question), :class => 'btn btn-mini' %></td>
         <% end %>
