--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,32 +27,56 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-inverse">  
-      <div class="navbar-inner">  
-        <div class="container">  
-          <ul class="nav">  
-            <li class="active">  
-            <a class="brand" href="#">TrevorPBL</a>  
-            </li>  
-            <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
-            <% if user_signed_in? %>
-              <li class="<%= 'active' if current_page?(destroy_user_session_path) %>"><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-            <% else %>
-              <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %>
-            <% end %>
-            <% if user_signed_in? %>
-              <li class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit Account", edit_user_registration_path %></li>
-            <% else %>
-              <li class="<%= 'active' if current_page?(new_user_registration_path) %>"><%= link_to "Sign Up", new_user_registration_path %>
-            <% end %>
-            <li class="<%= 'active' if current_page?(questions_path) %>"><%= link_to "Question", questions_path %></li>  
-            <li class="<%= 'active' if current_page?(topics_path) %>"><%= link_to "Topics", topics_path %></li>  
-            <li class="<%= 'active' if current_page?(students_path) %>"><%= link_to "Students", students_path %></li>  
-            <li class="<%= 'active' if current_page?(about_path) %>"><%= link_to "About", about_path %></li>  
-         </ul> 
-        </div>  
-      </div>  
-    </nav>
+    <nav class="navbar navbar-dark bg-inverse">
+  <a class="navbar-brand" href="#">Trevor PBL</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <% if user_signed_in? %>
+         <li class="nav-item active">
+         <a class="<%= 'active' if current_page?(destroy_user_session_path) %>">
+         <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></a>
+        </li>
+    <% else %>
+      <li class="nav-item"><a class= "<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %></a>
+    <% end %>
+    <% if user_signed_in? %>
+      <li class="nav-item active">
+        <a class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit Account", edit_user_registration_path %></a>
+      </li>
+    <% else %>
+      <li class="nav-item active"
+        <a class="<%= 'active' if current_page?(new_user_registration_path) %>"><%= link_to "Sign Up", new_user_registration_path %></a>
+    <% end %>
+    <li class="nav-item">
+      <a class="nav-link" href="/questions">Questions</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/topics">Topics</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="/students">Students</a>
+    </li>
+    </li>
+      <li class="nav-item">
+      <a class="nav-link" href="/about">About</a>
+    </li>
+
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+      <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </li>
+  </ul>
+  <form class="form-inline float-xs-right">
+    <input class="form-control" type="text" placeholder="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+</nav>
   <%= yield %>
 <%= flash[:error] %>
 <% if user_signed_in? %>
