--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,19 @@
 @import "bootstrap";
 body { padding-top: 0px; }
 
+strong.white {
+  color: #eee;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: center;
+    float: none;
+}
+
 @import "scaffolds:";
 
 @import "questions";
+
+
+
