--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,51 +27,57 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-dark bg-inverse">
-  <a class="navbar-brand" href="#">Trevor PBL</a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <% if user_signed_in? %>
+  <nav class="navbar navbar-dark bg-inverse">
+    <a class="navbar-brand" href="#">Trevor IBL</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+       </li>
+       <% if user_signed_in? %>
          <li class="nav-item active">
-         <a class="<%= 'active' if current_page?(destroy_user_session_path) %>">
-         <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></a>
+          <a class="<%= 'active' if current_page?(destroy_user_session_path) %>">
+            <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></a>
         </li>
-    <% else %>
-      <li class="nav-item"><a class= "<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %></a>
-    <% end %>
-    <% if user_signed_in? %>
-      <li class="nav-item active">
-        <a class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit Account", edit_user_registration_path %></a>
-      </li>
-    <% else %>
-      <li class="nav-item active"
-        <a class="<%= 'active' if current_page?(new_user_registration_path) %>"><%= link_to "Sign Up", new_user_registration_path %></a>
-    <% end %>
-    <li class="nav-item">
-      <a class="nav-link" href="/questions">Questions</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/topics">Topics</a>
-    </li>
+        <% else %>
+         <li class="nav-item">
+          <a class= "<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %></a>
+        <% end %>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <a class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit Account", edit_user_registration_path %></a>
+          </li>
+        <% else %>
+          <li class="nav-item active"
+            <a class="<%= 'active' if current_page?(new_user_registration_path) %>"><%= link_to "Sign Up", new_user_registration_path %></a>
+        <% end %>
         <li class="nav-item">
-      <a class="nav-link" href="/students">Students</a>
-    </li>
-    </li>
-      <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
-    </li>
+          <a class="nav-link" href="/questions">Questions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/topics">Topics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/students">Students</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <% if user_signed_in? %>
+            <strong class="white vcenter"> Signed in as <%= current_user.email %></strong> > 
+          <% end %>
+        </li>
 
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-      <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </li>
-  </ul>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+    </ul>
+    
   <form class="form-inline float-xs-right">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
