--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -18,8 +18,7 @@
   <%end%>
 
   <div class="form-inline">
-    <%= f.label :num %>
-    <%= f.number_field :num %>
+    <%= f.label :num %> <%= f.number_field :num %>
     <%= f.label :page %>
     <%= f.number_field :page %>
     <%= f.label :level %>
