--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -14,12 +14,13 @@ p, ol, ul, td {
 
 textarea {
   font-family: "Lucida Console", Monaco, "Courier New", Courier, monospace;
+  word-wrap: break-word;
 }
 
 pre {
   background-color: #eee;
   padding: 10px;
-  font-size: 11px;
+  font-size: 10px;
 }
 
 a {
